--- a/CART_RandomForest/classification_tree_random_forest_supermarket_data.ipynb
+++ b/CART_RandomForest/classification_tree_random_forest_supermarket_data.ipynb
@@ -490,7 +490,8 @@
    "id": "40c71fac",
    "metadata": {},
    "source": [
-    "## Subset with selected brands"
+    "## Subset with selected brands\n",
+    "In diesem Codeabschnitt wird ein Subset (Teilmenge) des DataFrames df_supermarkets erstellt, das nur die Supermärkte der Marken \"MIGROS\" und \"VOLG\" enthält. Hier ist eine detaillierte Erklärung des Codes:"
    ]
   },
   {
@@ -641,7 +642,8 @@
    "id": "1188266f",
    "metadata": {},
    "source": [
-    "## Pivot table"
+    "## Pivot table\n",
+    "Es wird eine Pivot-Tabelle erstllt, die verschiedene Aggregatfunktionen (Durchschnitt und Zählung) für ausgewählte Spalten berechnet und nach der brand-Spalte (Marke) gruppiert."
    ]
   },
   {
@@ -795,12 +797,15 @@
    "id": "33fdc652",
    "metadata": {},
    "source": [
-    "### Create train and test samples (train = 80%, test = 20% of the data)"
+    "### Create train and test samples (train = 80%, test = 20% of the data)\n",
+    "Es gibt keine feste Regel, wie viele Features man verwenden sollte. Entscheidungsbäume funktionieren jedoch am besten, wenn die Features tatsächlich relevant und informativ für die Zielvariable sind.\n",
+    "\n",
+    "Nein, die Features müssen nicht unbedingt numerisch sein, da Entscheidungsbäume sowohl mit numerischen als auch mit kategorialen Daten arbeiten können."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9ede480d",
    "metadata": {},
    "outputs": [
@@ -827,16 +832,16 @@
     }
    ],
    "source": [
-    "# Create train and test samples\n",
-    "X_train, X_test, y_train, y_test = train_test_split(df_sub[['lat',\n",
+    "# Create train and test samples (brand = Zielvariable, die vorhergesagt werden soll)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(df_sub[['lat', # Features/ Prädikatorvariablen\n",
     "                                                            'lon',\n",
     "                                                            'pop', \n",
     "                                                            'pop_dens', \n",
     "                                                            'frg_pct', \n",
     "                                                            'emp']],\n",
     "                                                    df_sub['brand'], \n",
-    "                                                    test_size=0.20, \n",
-    "                                                    random_state=42)\n",
+    "                                                    test_size=0.20, # 80% train, 20% test\n",
+    "                                                    random_state=42) \n",
     "\n",
     "# Show X_train\n",
     "print('X_train:')\n",
@@ -948,6 +953,85 @@
     "# Classification report\n",
     "print('Classification report')\n",
     "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b7b6796",
+   "metadata": {},
+   "source": [
+    "Hier ist eine detaillierte Interpretation der Confusion-Matrix und des Classification-Reports:\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Confusion Matrix\n",
+    "\n",
+    "Die Confusion Matrix zeigt, wie oft das Modell die Klassen korrekt und falsch klassifiziert hat. In diesem Fall gibt es zwei Klassen: \"MIGROS\" und \"VOLG\".\n",
+    "\n",
+    "\\[\n",
+    "\\begin{array}{cc|c|c|}\n",
+    "& & \\text{Predicted MIGROS} & \\text{Predicted VOLG} \\\\\n",
+    "\\hline\n",
+    "\\text{Actual MIGROS} & & 97 & 11 \\\\\n",
+    "\\text{Actual VOLG} & & 7 & 25 \\\\\n",
+    "\\hline\n",
+    "\\end{array}\n",
+    "\\]\n",
+    "\n",
+    "- **97** mal wurde die Klasse \"MIGROS\" korrekt als \"MIGROS\" klassifiziert (True Positives für MIGROS).\n",
+    "- **11** mal wurde \"MIGROS\" fälschlicherweise als \"VOLG\" klassifiziert (False Negatives für MIGROS).\n",
+    "- **7** mal wurde \"VOLG\" fälschlicherweise als \"MIGROS\" klassifiziert (False Positives für MIGROS).\n",
+    "- **25** mal wurde \"VOLG\" korrekt als \"VOLG\" klassifiziert (True Positives für VOLG).\n",
+    "\n",
+    "### Classification Report\n",
+    "\n",
+    "Der Classification Report liefert verschiedene Kennzahlen zur Bewertung der Klassifikationsleistung pro Klasse:\n",
+    "\n",
+    "1. **Precision**: \n",
+    "   - **MIGROS**: 0.93 – Von allen als \"MIGROS\" klassifizierten Instanzen waren 93% tatsächlich \"MIGROS\".\n",
+    "   - **VOLG**: 0.69 – Von allen als \"VOLG\" klassifizierten Instanzen waren 69% tatsächlich \"VOLG\".\n",
+    "   \n",
+    "   **Interpretation**: Die Präzision ist höher für die Klasse \"MIGROS\" als für \"VOLG\". Das bedeutet, dass das Modell \"MIGROS\" zuverlässiger klassifiziert als \"VOLG\".\n",
+    "\n",
+    "2. **Recall**:\n",
+    "   - **MIGROS**: 0.90 – Von allen tatsächlichen \"MIGROS\"-Instanzen wurden 90% korrekt als \"MIGROS\" klassifiziert.\n",
+    "   - **VOLG**: 0.78 – Von allen tatsächlichen \"VOLG\"-Instanzen wurden 78% korrekt als \"VOLG\" klassifiziert.\n",
+    "   \n",
+    "   **Interpretation**: Der Recall für \"MIGROS\" ist etwas höher, was bedeutet, dass das Modell in der Lage ist, einen größeren Anteil der tatsächlichen \"MIGROS\"-Instanzen korrekt zu erkennen als \"VOLG\".\n",
+    "\n",
+    "3. **F1-Score**:\n",
+    "   - **MIGROS**: 0.92 – Der F1-Score ist der harmonische Mittelwert aus Präzision und Recall für \"MIGROS\".\n",
+    "   - **VOLG**: 0.74 – Der F1-Score für \"VOLG\" ist niedriger, was auf eine insgesamt schlechtere Leistung des Modells für diese Klasse hinweist.\n",
+    "   \n",
+    "   **Interpretation**: Ein höherer F1-Score für \"MIGROS\" zeigt, dass das Modell für diese Klasse insgesamt besser funktioniert. Der niedrigere F1-Score für \"VOLG\" deutet darauf hin, dass das Modell Schwierigkeiten hat, \"VOLG\" korrekt zu klassifizieren.\n",
+    "\n",
+    "4. **Support**:\n",
+    "   - Dies ist die Anzahl der tatsächlichen Vorkommen jeder Klasse im Testset:\n",
+    "     - **MIGROS**: 108\n",
+    "     - **VOLG**: 32\n",
+    "\n",
+    "5. **Gesamtergebnisse**:\n",
+    "   - **Accuracy**: 0.87 – Das Modell hat insgesamt 87% der Instanzen korrekt klassifiziert.\n",
+    "   - **Macro Average**:\n",
+    "     - **Precision**: 0.81 – Durchschnittliche Präzision über beide Klassen hinweg.\n",
+    "     - **Recall**: 0.84 – Durchschnittlicher Recall über beide Klassen hinweg.\n",
+    "     - **F1-Score**: 0.83 – Durchschnittlicher F1-Score über beide Klassen hinweg.\n",
+    "   - **Weighted Average**:\n",
+    "     - **Precision**: 0.88 – Gewichtete Präzision basierend auf der Häufigkeit jeder Klasse.\n",
+    "     - **Recall**: 0.87 – Gewichteter Recall basierend auf der Häufigkeit jeder Klasse.\n",
+    "     - **F1-Score**: 0.87 – Gewichteter F1-Score basierend auf der Häufigkeit jeder Klasse.\n",
+    "   \n",
+    "   **Interpretation**: Die Gewichteten Durchschnittswerte (weighted avg) bieten eine Gesamtübersicht, die die Häufigkeit jeder Klasse berücksichtigt. Ein gewichteter F1-Score von 0.87 deutet auf eine gute, aber nicht perfekte Modellleistung hin.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Zusammenfassung\n",
+    "\n",
+    "- Das Modell klassifiziert \"MIGROS\" zuverlässiger als \"VOLG\" (höhere Präzision und F1-Score für \"MIGROS\").\n",
+    "- Die **Gesamtgenauigkeit** von 87% zeigt, dass das Modell insgesamt gut funktioniert, aber Schwierigkeiten bei der korrekten Klassifikation von \"VOLG\" hat.\n",
+    "- **Verbesserungspotenzial**: Die Leistung für \"VOLG\" könnte durch zusätzliche Feature-Engineering-Maßnahmen oder eine Anpassung der Modellparameter verbessert werden, da diese Klasse eine niedrigere Präzision und einen niedrigeren F1-Score aufweist.\n",
+    "\n",
+    "Insgesamt ist das Modell gut, zeigt aber Schwächen bei der Klassifikation von \"VOLG\"."
    ]
   },
   {
@@ -1098,6 +1182,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f2a1733",
+   "metadata": {},
+   "source": [
+    "- Der Baum beginnt mit der Bedingung emp <= 1399.0. Dies bedeutet, dass die Anzahl der Angestellten (emp) der erste wichtige Faktor ist, der darüber entscheidet, ob ein Supermarkt als \"MIGROS\" oder \"VOLG\" klassifiziert wird.\n",
+    "Die Aufteilung ergibt eine Gini-Impurity von 0.435, was auf eine moderate Verunreinigung der Klassen hinweist.\n",
+    "- Pop (Bevölkerung) und pop_dens (Bevölkerungsdichte) sind die nächsten entscheidenden Faktoren. Diese Bedingungen tragen wesentlich dazu bei, die Knoten weiter zu trennen und die Klassen zu differenzieren.\n",
+    "- Am unteren Ende des Baums befinden sich viele Blätter mit sehr niedrigen Gini-Werten (nahe 0), was bedeutet, dass diese Blätter fast ausschließlich eine Klasse enthalten, entweder \"MIGROS\" oder \"VOLG\".\n",
+    "- Der Baum zeigt eine stärkere Tendenz zur Klassifikation von \"MIGROS\" in den meisten Knoten, was darauf hinweist, dass \"MIGROS\" möglicherweise häufiger in den Trainingsdaten vorkam oder dass die Merkmale eher auf \"MIGROS\" zutreffen.\n",
+    "- Wenn z. B. emp <= 512.5 und pop <= 682, ist die Wahrscheinlichkeit hoch, dass der Supermarkt \"MIGROS\" ist.\n",
+    "Wenn jedoch pop_dens <= 38.277 und lon <= 8.454, ist die Wahrscheinlichkeit höher, dass der Supermarkt \"VOLG\" ist."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "55281fec",
    "metadata": {},
    "source": [
@@ -1110,7 +1208,8 @@
    "id": "5123f45e",
    "metadata": {},
    "source": [
-    "### Create train and test samples (train = 80%, test = 20% of the data)"
+    "### Create train and test samples (train = 80%, test = 20% of the data)\n",
+    "Ein Random Forest Classifier kann nur numerische Werte direkt verarbeiten. Falls der Datensatz kategoriale Merkmale enthält, müssen diese durch Verfahren wie One-Hot-Encoding oder Label-Encoding in numerische Werte umgewandelt werden, bevor sie dem Random Forest Classifier übergeben werden können."
    ]
   },
   {
@@ -1311,6 +1410,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d2b3e4d",
+   "metadata": {},
+   "source": [
+    "Das Modell hat in den meisten Fällen die Marken korrekt vorhergesagt, aber es gibt einige Fehlklassifikationen, was auf mögliche Optimierungspotenziale hinweist."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "81eefb08",
    "metadata": {},
    "source": [
@@ -1352,6 +1459,40 @@
     "# Classification report\n",
     "print('Classification report')\n",
     "print(classification_report(y2_test, y_pred_rf))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb729cb8",
+   "metadata": {},
+   "source": [
+    "Hier ist eine kurze Interpretation der Confusion-Matrix und des Classification Reports:\n",
+    "\n",
+    "### Confusion Matrix\n",
+    "- **98** mal wurde \"MIGROS\" korrekt als \"MIGROS\" klassifiziert (True Positives für MIGROS).\n",
+    "- **6** mal wurde \"MIGROS\" fälschlicherweise als \"VOLG\" klassifiziert (False Negatives für MIGROS).\n",
+    "- **8** mal wurde \"VOLG\" fälschlicherweise als \"MIGROS\" klassifiziert (False Positives für MIGROS).\n",
+    "- **28** mal wurde \"VOLG\" korrekt als \"VOLG\" klassifiziert (True Positives für VOLG).\n",
+    "\n",
+    "### Classification Report\n",
+    "\n",
+    "#### Klasse \"MIGROS\":\n",
+    "- **Precision**: 0.92 – Von allen als \"MIGROS\" klassifizierten Instanzen waren 92% tatsächlich \"MIGROS\".\n",
+    "- **Recall**: 0.94 – Von allen tatsächlichen \"MIGROS\"-Instanzen wurden 94% korrekt als \"MIGROS\" erkannt.\n",
+    "- **F1-Score**: 0.93 – Hohe Präzision und Recall führen zu einem guten F1-Score.\n",
+    "\n",
+    "#### Klasse \"VOLG\":\n",
+    "- **Precision**: 0.82 – Von allen als \"VOLG\" klassifizierten Instanzen waren 82% tatsächlich \"VOLG\".\n",
+    "- **Recall**: 0.78 – Von allen tatsächlichen \"VOLG\"-Instanzen wurden 78% korrekt als \"VOLG\" erkannt.\n",
+    "- **F1-Score**: 0.80 – Der F1-Score für \"VOLG\" ist niedriger, was auf eine schlechtere Leistung bei der Klassifikation von \"VOLG\" im Vergleich zu \"MIGROS\" hinweist.\n",
+    "\n",
+    "### Gesamtmetriken\n",
+    "- **Accuracy**: 0.90 – Das Modell hat insgesamt 90% der Instanzen korrekt klassifiziert.\n",
+    "- **Macro Average**: Berücksichtigt den Durchschnitt über beide Klassen, ohne deren Häufigkeit zu gewichten. F1-Score von 0.87.\n",
+    "- **Weighted Average**: Berücksichtigt die Häufigkeit jeder Klasse. Der gewichtete F1-Score beträgt 0.90, was auf eine starke Gesamtleistung des Modells hinweist.\n",
+    "\n",
+    "### Zusammenfassung\n",
+    "Das Modell klassifiziert \"MIGROS\" sehr zuverlässig, zeigt aber eine etwas schwächere Leistung bei der Klassifikation von \"VOLG\". Die Gesamtgenauigkeit von 90% ist gut, jedoch könnte die Klassifikation für \"VOLG\" durch Optimierungen verbessert werden."
    ]
   },
   {
@@ -1421,6 +1562,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b4fd3e4b",
+   "metadata": {},
+   "source": [
+    "Die Feature-Wichtigkeit zeigt, dass emp und pop die wichtigsten Prädiktoren für die Klassifikation der Supermarktmarken sind, während geografische Merkmale wie lat und lon eine geringere Bedeutung haben. Diese Information kann verwendet werden, um das Modell zu optimieren, indem man sich auf die wichtigsten Merkmale konzentriert oder weniger wichtige Merkmale entfernt, um die Modellkomplexität zu reduzieren."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dd2794ee",
    "metadata": {},
    "source": [
@@ -1460,6 +1609,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "398c9324",
+   "metadata": {},
+   "source": [
+    "Die ROC-Kurve (Receiver Operating Characteristic) zeigt die Leistung des Random Forest Classifiers bei der Klassifikation und wird in diesem Fall verwendet, um die Unterscheidung zwischen den beiden Klassen (\"MIGROS\" und \"VOLG\") zu visualisieren. Die AUC (Area Under Curve) gibt die Gesamtleistung des Modells an.\n",
+    "\n",
+    "### Interpretation der ROC-Kurve:\n",
+    "\n",
+    "1. **Achsen der ROC-Kurve**:\n",
+    "   - **X-Achse (False Positive Rate)**: Der Anteil der Negativinstanzen (z.B. \"MIGROS\"), die fälschlicherweise als positiv (z.B. \"VOLG\") klassifiziert wurden. Werte von 0.0 bis 1.0 sind möglich.\n",
+    "   - **Y-Achse (True Positive Rate)**: Der Anteil der Positivinstanzen (z.B. \"VOLG\"), die korrekt als positiv klassifiziert wurden. Auch hier sind Werte von 0.0 bis 1.0 möglich.\n",
+    "\n",
+    "2. **Kurvenverlauf**:\n",
+    "   - Die ROC-Kurve verläuft nahe der oberen linken Ecke, was auf eine **gute Klassifikationsleistung** hinweist. Ein idealer Klassifikator würde die Kurve entlang der linken und oberen Ränder führen und die oberen Werte erreichen.\n",
+    "\n",
+    "3. **AUC-Wert**:\n",
+    "   - **AUC = 0.95**: Die Area Under Curve beträgt 0.95, was auf eine sehr hohe Klassifikationsleistung hinweist. Ein AUC-Wert von 1.0 wäre perfekt, während ein Wert von 0.5 auf zufälliges Raten hinweisen würde.\n",
+    "   - Ein Wert von 0.95 bedeutet, dass das Modell in 95% der Fälle die Klassen korrekt trennt.\n",
+    "\n",
+    "4. **Zusammenfassung der Modellleistung**:\n",
+    "   - Die ROC-Kurve und der hohe AUC-Wert zeigen, dass der Random Forest Classifier sehr gut zwischen den Klassen \"MIGROS\" und \"VOLG\" unterscheiden kann.\n",
+    "   - Der AUC-Wert von 0.95 deutet darauf hin, dass das Modell zuverlässig ist und eine geringe Fehlerrate bei der Klassifikation aufweist.\n",
+    "\n",
+    "### Fazit\n",
+    "Die ROC-Kurve und der AUC-Wert geben an, dass das Modell eine sehr gute Trennschärfe zwischen den Klassen besitzt, und die Wahrscheinlichkeit für eine korrekte Klassifikation der Instanzen ist hoch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "387bd5b3",
    "metadata": {},
    "source": [
@@ -1479,7 +1656,7 @@
       "-----------------------------------\n",
       "POSIX\n",
       "Linux | 6.5.0-1025-azure\n",
-      "Datetime: 2024-11-10 19:12:22\n",
+      "Datetime: 2024-11-10 22:12:32\n",
       "Python Version: 3.11.10\n",
       "-----------------------------------\n"
      ]
