--- a/Linear_Regression/linear_regression_apartment_prices.ipynb
+++ b/Linear_Regression/linear_regression_apartment_prices.ipynb
@@ -351,7 +351,8 @@
    "id": "f32a7699",
    "metadata": {},
    "source": [
-    "### Fit the simple linear regression model"
+    "### Fit the simple linear regression model\n",
+    "Das Bild zeigt die Ergebnisse eines einfachen linearen Regressionsmodells, das auf die Beziehung zwischen der Wohnungsfläche (area) und dem Mietpreis (price) trainiert wurde. Es gibt folgende Informationen aus:"
    ]
   },
   {
@@ -382,6 +383,20 @@
     "print(f'Slope of regression line (beta):          {slope:.3f}')\n",
     "print(f'p-value:                                  {p:.4f}')\n",
     "print(f'R-squared (coefficient of determination): {r**2:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca55d13b",
+   "metadata": {},
+   "source": [
+    "- Intercept (Achsenabschnitt): Der Wert ist etwa 1272.94. Dies ist der Wert, bei dem die Regressionslinie die y-Achse schneidet, also der geschätzte Preis bei einer Fläche von 0 m². Obwohl es in der Praxis keinen Sinn ergibt, Wohnungen mit 0 m² Fläche zu betrachten, ist dieser Wert für die mathematische Darstellung der Linie notwendig.\n",
+    "\n",
+    "- Slope (Steigung): Die Steigung der Regressionslinie (beta) beträgt 13.548. Dies bedeutet, dass der Mietpreis für jede zusätzliche Quadratmeterfläche um etwa 13,55 CHF steigt.\n",
+    "\n",
+    "- p-Wert: Der p-Wert ist 0.0000, was bedeutet, dass die Steigung statistisch signifikant ist (auf einem 5%-Niveau), also die Wohnungsfläche einen signifikanten Einfluss auf den Mietpreis hat. In einer linearen Regression sollte der p-Wert idealerweise kleiner als 0.05 sein, wenn wir eine Signifikanz auf einem 5%-Niveau annehmen. Ein niedriger p-Wert weist darauf hin, dass die erklärende Variable (unabhängige Variable) einen signifikanten Beitrag zur Vorhersage der Zielvariable (abhängige Variable) leistet\n",
+    "\n",
+    "- R-squared (Bestimmtheitsmaß): Der R²-Wert beträgt etwa 0.3678. Dies bedeutet, dass etwa 36.78% der Variation im Mietpreis durch die Wohnungsfläche erklärt werden. Ein höherer R²-Wert wäre wünschenswert, um die Modellgüte zu erhöhen."
    ]
   },
   {
@@ -430,10 +445,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7cde1341",
+   "metadata": {},
+   "source": [
+    "Dieses Diagramm zeigt eine einfache lineare Regression, die den Zusammenhang zwischen der **Wohnfläche (in m²)** und dem **Mietpreis (in CHF)** für Wohnungen modelliert.\n",
+    "\n",
+    "##### Interpretation der Grafik:\n",
+    "\n",
+    "1. **Streudiagramm**:\n",
+    "   - Die grünen Punkte repräsentieren die tatsächlichen Datenpunkte, also die beobachteten Werte für Wohnungsfläche und Mietpreis.\n",
+    "   - Man sieht eine gewisse Streuung der Punkte, was bedeutet, dass der Mietpreis nicht perfekt nur durch die Fläche bestimmt wird. Es gibt viele andere Faktoren, die ebenfalls eine Rolle spielen könnten.\n",
+    "\n",
+    "2. **Regressionslinie (rote gestrichelte Linie)**:\n",
+    "   - Die gestrichelte rote Linie ist die **Regressionslinie**. Sie stellt das lineare Modell dar, das den durchschnittlichen Zusammenhang zwischen Wohnfläche und Mietpreis zeigt.\n",
+    "   - Die positive Steigung der Linie bedeutet, dass der Mietpreis tendenziell mit zunehmender Wohnfläche steigt. Das Modell geht also davon aus, dass größere Wohnungen tendenziell teurer sind.\n",
+    "\n",
+    "3. **Fit des Modells**:\n",
+    "   - Die Linie verläuft durch die Mitte der Datenpunkte, aber die Punkte sind ziemlich stark um die Linie gestreut. Das deutet darauf hin, dass die Wohnfläche zwar einen Einfluss auf den Mietpreis hat, aber nicht der einzige Faktor ist.\n",
+    "   - Der Streuungsgrad um die Linie zeigt, dass das Modell nicht alle Variationen im Mietpreis erklären kann, was wahrscheinlich zu einem eher moderaten R²-Wert (Bestimmtheitsmaß) führt. Das R² würde in diesem Fall anzeigen, wie viel Prozent der Preisvariation durch die Fläche erklärt wird.\n",
+    "\n",
+    "4. **Mögliche Verbesserungen**:\n",
+    "   - Da die Daten stark streuen, könnte das Modell verbessert werden, indem man weitere erklärende Variablen hinzufügt (z.B. Lage, Zustand der Wohnung, Anzahl Zimmer etc.), was durch eine multiple lineare Regression möglich wäre.\n",
+    "\n",
+    "### Zusammenfassung\n",
+    "\n",
+    "Die lineare Regression zeigt, dass es einen positiven Zusammenhang zwischen der Wohnfläche und dem Mietpreis gibt: **Je größer die Fläche, desto höher tendenziell der Mietpreis**. Jedoch ist die Streuung der Punkte um die Regressionslinie herum relativ groß, was darauf hindeutet, dass die Fläche allein den Preis nicht vollständig erklärt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4168bf46",
    "metadata": {},
    "source": [
-    "### Check model residuals (residuals = observed prices minus predicted prices)"
+    "### Check model residuals (residuals = observed prices minus predicted prices)\n",
+    "Diese Ausgabe zeigt die Berechnung des Residuals für den ersten Datenpunkt im Trainingsdatensatz. Residuen sind die Differenzen zwischen den beobachteten Werten (tatsächlichen Preisen) und den durch das Modell vorhergesagten Werten. Sie geben Aufschluss darüber, wie gut das Modell den tatsächlichen Wert für einen bestimmten Datenpunkt vorhergesagt hat."
    ]
   },
   {
@@ -460,6 +505,18 @@
     "print(f'1st Predicted price in dataset: {mymodel[0]:.2f}')\n",
     "print(f'1st Observed price in dataset: {y_train[0]:.2f}')\n",
     "print(f'1st Residual price in dataset: {residuals[0]:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27fe58f9",
+   "metadata": {},
+   "source": [
+    "1. Dies ist der durch das Modell vorhergesagte Preis für die erste Wohnung im Trainingsdatensatz. Das Modell schätzt den Preis dieser Wohnung auf etwa 2898.72 CHF.\n",
+    "2. Dies ist der tatsächliche, beobachtete Preis für dieselbe Wohnung im Trainingsdatensatz, der bei 1441.00 CHF liegt.\n",
+    "3. Das Residuum (Residual) wird als Differenz zwischen dem beobachteten Preis und dem vorhergesagten Preis berechnet.\n",
+    "\n",
+    "Das Modell hat in diesem Fall den Mietpreis der Wohnung erheblich überschätzt. Das negative Residuum zeigt, dass die Vorhersage zu hoch war. Eine hohe Residualgröße (wie hier -1457.72) weist auf eine erhebliche Abweichung hin und deutet darauf hin, dass das Modell möglicherweise nicht optimal für diese Datenpunkte ist oder dass weitere erklärende Variablen benötigt werden, um die Variation im Preis besser zu erfassen."
    ]
   },
   {
@@ -508,6 +565,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0a7deb62",
+   "metadata": {},
+   "source": [
+    "- Die Verteilung der Residuen sieht ungefähr symmetrisch um 0 aus, wobei die meisten Residuen in einem Bereich von etwa -1000 bis 1000 CHF liegen.\n",
+    "- Das Modell scheint für viele Datenpunkte relativ gute Vorhersagen zu liefern, da die Residuen symmetrisch und überwiegend um 0 zentriert sind.\n",
+    "- Der Schwerpunkt der Verteilung liegt nahe bei 0, was zeigt, dass das Modell im Durchschnitt weder stark über- noch unterschätzt. Das ist ein Zeichen für ein ausgewogenes Modell.\n",
+    "- Allerdings gibt es einige signifikante Residuen (insbesondere auf der positiven Seite), was auf Ausreißer oder zusätzliche Einflüsse hindeutet, die nicht im Modell berücksichtigt wurden.\n",
+    "- Insgesamt deutet das Histogramm darauf hin, dass das Modell eine gewisse Vorhersagekraft hat, aber die Aufnahme weiterer erklärender Variablen könnte die Genauigkeit verbessern."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b3108ba5",
    "metadata": {},
    "source": [
@@ -545,6 +614,14 @@
     "# Compare the observed prices with the predicted prices\n",
     "for i in range(0,10):\n",
     "    print(f'Observed price: {y_test.iloc[i]:.1f}, Predicted price: {predicted.iloc[i]:.1f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb33d7df",
+   "metadata": {},
+   "source": [
+    "Das Modell liefert Vorhersagen, die im Durchschnitt in der Nähe der tatsächlichen Preise liegen, aber bei extrem niedrigen oder hohen Preisen größere Fehler aufweisen. Dies deutet darauf hin, dass ein einfaches lineares Modell möglicherweise nicht ausreicht, um die Preisvariationen vollständig zu erklären."
    ]
   },
   {
@@ -675,7 +752,32 @@
    "id": "6bfc2964",
    "metadata": {},
    "source": [
-    "### Interpretation of the relevant (in this course) statistics in the table above"
+    "### Interpretation of the relevant (in this course) statistics in the table above\n",
+    "Dieser Output zeigt die Ergebnisse einer **multiplen linearen Regression** zur Vorhersage des **Preises** einer Wohnung anhand von zwei erklärenden Variablen: `area` (Wohnfläche in Quadratmetern) und `pop_dens` (Bevölkerungsdichte).\n",
+    "\n",
+    "1. **R-squared und Adj. R-squared**:\n",
+    "   - **R-squared**: 0.588, d.h. ca. **58.8%** der Variation im Mietpreis kann durch das Modell erklärt werden. Das ist eine moderate Erklärungsstärke, zeigt aber, dass es noch andere Faktoren gibt, die den Mietpreis beeinflussen könnten.\n",
+    "   - **Adjusted R-squared**: 0.586. Der bereinigte R²-Wert ist ähnlich wie R² und berücksichtigt die Anzahl der Prädiktoren. Dieser Wert zeigt, dass das Modell in Bezug auf die Anzahl der Variablen relativ gut angepasst ist.\n",
+    "\n",
+    "2. **Koeffizienten (coef)**:\n",
+    "   - **Intercept (const)**: 331.1861. Dies ist der geschätzte Preis, wenn `area` und `pop_dens` den Wert 0 haben, was in der Realität keinen sinnvollen Bezug hat, aber für das Modell mathematisch notwendig ist.\n",
+    "   - **area**: Der Koeffizient für `area` beträgt **17.9213**. Das bedeutet, dass für jede Einheit Erhöhung der Fläche (1 m²) der Preis im Durchschnitt um etwa 17.92 CHF steigt, wenn alle anderen Faktoren konstant bleiben.\n",
+    "   - **pop_dens**: Der Koeffizient für `pop_dens` beträgt **0.2379**. Dies bedeutet, dass der Preis um ca. 0.24 CHF steigt, wenn die Bevölkerungsdichte um eine Einheit erhöht wird, vorausgesetzt, alle anderen Faktoren bleiben konstant.\n",
+    "\n",
+    "3. **p-Werte (P>|t|)**:\n",
+    "   - Sowohl `area` als auch `pop_dens` haben p-Werte von 0.000, was bedeutet, dass beide Variablen auf einem Signifikanzniveau von 5% statistisch signifikant sind. Sie tragen also signifikant zur Vorhersage des Mietpreises bei.\n",
+    "\n",
+    "4. **F-Statistik und Prob (F-statistic)**:\n",
+    "   - Die F-Statistik beträgt 409.2 mit einem p-Wert von nahe 0. Dies zeigt, dass das Modell als Ganzes statistisch signifikant ist, also zumindest eine der erklärenden Variablen einen signifikanten Einfluss auf die Zielvariable hat.\n",
+    "\n",
+    "5. **AIC und BIC**:\n",
+    "   - **AIC** (Akaike Information Criterion): 8846.6 und **BIC** (Bayesian Information Criterion): 8860. Diese Werte dienen dem Modellvergleich: Kleinere Werte deuten auf eine bessere Modellanpassung hin, wenn mehrere Modelle verglichen werden.\n",
+    "\n",
+    "6. **Zusätzliche Statistikwerte**:\n",
+    "   - **Omnibus, Prob(Omnibus), Skew, Kurtosis**: Diese Werte geben Auskunft über die Verteilung der Residuen. Der Omnibus-Test und der Jarque-Bera-Test (JB) zeigen hier signifikante p-Werte, was darauf hindeutet, dass die Residuen möglicherweise nicht normalverteilt sind.\n",
+    "\n",
+    "### Zusammenfassung:\n",
+    "Das Modell erklärt rund 58.8% der Variabilität des Mietpreises und ist statistisch signifikant. Beide Prädiktoren, `area` und `pop_dens`, haben signifikante Effekte auf den Preis. Jedoch könnte die Normalverteilungsannahme der Residuen verletzt sein, was die Validität des Modells beeinträchtigen könnte. Weitere Variablen oder Transformationen könnten das Modell verbessern."
    ]
   },
   {
@@ -735,6 +837,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d106f5b8",
+   "metadata": {},
+   "source": [
+    "Dieses Histogramm zeigt die **Residuen** des **multiplen linearen Regressionsmodells**, das den Mietpreis basierend auf der Fläche (`area`) und der Bevölkerungsdichte (`pop_dens`) vorhersagt.\n",
+    "\n",
+    "### Interpretation und Vergleich mit der einfachen linearen Regression:\n",
+    "\n",
+    "1. **Symmetrie und Verteilung**:\n",
+    "   - Die Residuen sind größtenteils um 0 symmetrisch verteilt, was ein gutes Zeichen für das Modell ist. Es zeigt, dass das Modell im Durchschnitt weder stark überschätzt noch unterschätzt.\n",
+    "   - Im Vergleich zur **einfachen linearen Regression** scheinen die Residuen hier jedoch leicht nach rechts zu verzerren, was auf einige positive Ausreißer hinweist, bei denen der vorhergesagte Preis niedriger ist als der tatsächliche Preis.\n",
+    "\n",
+    "2. **Form und Breite der Verteilung**:\n",
+    "   - Die Residuen verteilen sich hauptsächlich zwischen -1000 und 1000, wobei einige Residuen bis zu 2500 reichen. Die Breite der Verteilung ist etwas größer als bei der einfachen linearen Regression, was darauf hindeutet, dass die multiple Regression zwar besser an die Daten angepasst ist, aber noch Verbesserungsbedarf besteht.\n",
+    "   - Die einfache lineare Regression zeigte ebenfalls eine breite Streuung, allerdings schienen dort die Residuen stärker von 0 abzuweichen.\n",
+    "\n",
+    "3. **Vergleich zur einfachen Regression**:\n",
+    "   - Im Vergleich zur einfachen linearen Regression, die nur `area` als Prädiktor nutzte, hat die multiple Regression durch die Hinzunahme von `pop_dens` zusätzliche Variation des Mietpreises erklärt. Dies ist in den statistischen Ergebnissen sichtbar, wo R² höher ist (58.8%).\n",
+    "   - Die multiple Regression scheint eine etwas bessere Anpassung zu bieten, was die Residuenverteilung insgesamt zeigt, auch wenn einige Ausreißer bestehen bleiben.\n",
+    "\n",
+    "### Fazit:\n",
+    "Die multiple Regression verbessert die Vorhersagekraft des Modells im Vergleich zur einfachen linearen Regression, wie sich an der besseren Residuenverteilung und dem höheren R²-Wert zeigt. Dennoch weisen die Residuen weiterhin auf einige systematische Fehler hin, möglicherweise aufgrund fehlender weiterer erklärender Variablen oder nicht-linearer Zusammenhänge."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5dd244d9",
    "metadata": {},
    "source": [
@@ -772,6 +899,14 @@
     "# Compare the observed prices with the predicted prices\n",
     "for i in range(0,10):\n",
     "    print(f'Observed price: {y_test.iloc[i]:.1f}, Predicted price: {predicted_new.iloc[i]:.1f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0568532a",
+   "metadata": {},
+   "source": [
+    "Das Modell macht akzeptable Vorhersagen für mittlere Werte, aber bei extremen Werten (insbesondere hohe Preise) gibt es größere Fehler. Weitere Modellanpassungen könnten die Genauigkeit der Vorhersagen verbessern."
    ]
   },
   {
