--- a/Linear_Regression/linear_regression_confidence_and_prediction_intervals.ipynb
+++ b/Linear_Regression/linear_regression_confidence_and_prediction_intervals.ipynb
@@ -263,7 +263,10 @@
    "source": [
     "## Generate Prediction- and Confidence Intervals\n",
     "\n",
-    "We calculate the prediction- and confidence intervals for the model."
+    "We calculate the prediction- and confidence intervals for the model.\n",
+    "\n",
+    "- The confidence interval bounds (mean_ci_lower and mean_ci_upper) give us an estimate for the average rental price, while the prediction interval bounds (obs_ci_lower and obs_ci_upper) give a range for individual predictions.\n",
+    "- In practical terms, the prediction interval is useful when predicting the rental price for a new apartment based on its living area, while the confidence interval is more relevant for understanding the model's accuracy in estimating the average price for a given living area."
    ]
   },
   {
@@ -435,6 +438,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Dieser Plot veranschaulicht ein einfaches lineares Regressionsmodell, das den Mietpreis basierend auf der Wohnfläche vorhersagt. Zusätzlich zeigt er ein 95%-Konfidenzintervall für die Regressionslinie.\n",
+    "\n",
+    "### Erklärung der wichtigsten Elemente:\n",
+    "\n",
+    "1. **Beobachtete Datenpunkte (Schwarze X)**:\n",
+    "   - Diese Punkte repräsentieren die tatsächlich beobachteten Mietpreise im Datensatz für verschiedene Wohnflächen. Sie streuen um die Regressionslinie herum, was die Variabilität in den Daten anzeigt.\n",
+    "\n",
+    "2. **Regressionslinie (Blaue Linie)**:\n",
+    "   - Die Regressionslinie zeigt die beste lineare Anpassung, um den Mietpreis anhand der Wohnfläche vorherzusagen. Die Gleichung der Linie wurde wahrscheinlich aus der Steigung und dem Achsenabschnitt berechnet, die im Regressionsmodell (in vorherigen Zellen deines Notebooks) ermittelt wurden.\n",
+    "\n",
+    "3. **95%-Konfidenzintervall (Blau schattierter Bereich)**:\n",
+    "   - Der schattierte Bereich um die Regressionslinie stellt das 95%-Konfidenzintervall für den geschätzten Durchschnittsmietpreis bei jeder Wohnfläche dar.\n",
+    "   - Dieses Intervall zeigt, in welchem Bereich der durchschnittliche Mietpreis mit einer 95%-igen Sicherheit erwartet wird.\n",
+    "   - Es ist auffällig, dass das Konfidenzintervall breiter wird, je weiter man sich vom Mittelwert der Wohnfläche entfernt. Dies ist üblich bei linearen Regressionen, da die Unsicherheit der Vorhersagen an den Randbereichen des Datensatzes zunimmt.\n",
+    "\n",
+    "### Interpretation:\n",
+    "- Die Regressionslinie zeigt eine positive Beziehung zwischen Wohnfläche und Mietpreis, was bedeutet, dass der Mietpreis tendenziell steigt, wenn die Wohnfläche zunimmt.\n",
+    "- Das Konfidenzintervall gibt den Bereich an, in dem der tatsächliche durchschnittliche Mietpreis für eine gegebene Wohnfläche erwartet wird.\n",
+    "- Beobachtete Datenpunkte, die außerhalb des Konfidenzintervalls liegen, weisen auf Abweichungen vom Modell hin, liegen jedoch in einem vernünftigen Bereich, was für reale Daten normal ist.\n",
+    "\n",
+    "Zusammenfassend gibt der Plot einen visuellen Einblick in die Beziehung zwischen Wohnfläche und Mietpreis und zeigt sowohl den Trend als auch das Vertrauen in die Modellvorhersagen für den durchschnittlichen Mietpreis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Visualizing the Regression Line and Prediction Interval\n",
     "\n",
     "We now plot the observed data along with the regression line, confidence- and prediction intervals."
@@ -492,6 +522,26 @@
     "\n",
     "# Show plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dieser Plot zeigt die Regression zwischen Wohnfläche und Mietpreis und enthält sowohl das Konfidenz- als auch das Prognoseintervall:\n",
+    "\n",
+    "1. **Regressionslinie (blaue Linie)**:\n",
+    "   - Zeigt die beste lineare Schätzung des Mietpreises basierend auf der Wohnfläche.\n",
+    "\n",
+    "2. **95%-Konfidenzintervall (blau schattiert)**:\n",
+    "   - Gibt den Bereich an, in dem der **durchschnittliche Mietpreis** für eine bestimmte Wohnfläche mit 95%iger Sicherheit liegen wird.\n",
+    "   - Dieses Intervall ist enger, da es nur den durchschnittlichen Trend beschreibt.\n",
+    "\n",
+    "3. **95%-Prognoseintervall (orange schattiert)**:\n",
+    "   - Zeigt den Bereich, in dem **individuelle Mietpreise** mit 95%iger Sicherheit erwartet werden können.\n",
+    "   - Das Prognoseintervall ist breiter, weil es die Streuung um die Linie für einzelne Vorhersagen erfasst und so die Unsicherheit für individuelle Werte darstellt.\n",
+    "\n",
+    "Insgesamt verdeutlicht der Plot, dass die Vorhersagen für einzelne Datenpunkte unsicherer sind als für den Mittelwert, was in der Breite des Prognoseintervalls zum Ausdruck kommt."
    ]
   },
   {
